// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invalid Answering setAnswer invalid choice 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": "This field is required.",
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": "Please select an option.",
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": "This field is required.",
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": "Please select an option.",
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Invalid Answering setAnswer invalid choice 2`] = `
{
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Invalid Answering setAnswer invalid choice 3`] = `
{
  "group1Question3": [],
  "subGroup1Question3": [],
  "subGroup1Question4": [],
}
`;

exports[`Invalid Answering setAnswer invalid choice 4`] = `
{
  "group1Question3": [],
}
`;

exports[`Invalid Answering setAnswer invalid choice 5`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": "This field is required.",
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": "Please select an option.",
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": "This field is required.",
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": "Please select an option.",
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Invalid Answering setAnswer invalid choice 6`] = `
{
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Invalid Answering setAnswer invalid choice 7`] = `
{
  "group1Question3": [],
  "subGroup1Question3": [],
  "subGroup1Question4": [],
}
`;

exports[`Invalid Answering setAnswer invalid choice 8`] = `
{
  "group1Question3": [],
}
`;

exports[`Invalid Answering setAnswer undefined answer 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": "This field is required.",
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": "Please select an option.",
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": "This field is required.",
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": "Please select an option.",
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Invalid Answering setAnswer undefined answer 2`] = `
{
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Invalid Answering setAnswer undefined answer 3`] = `
{
  "group1Question3": [],
  "subGroup1Question3": [],
  "subGroup1Question4": [],
}
`;

exports[`Invalid Answering setAnswer undefined answer 4`] = `
{
  "group1Question3": [],
}
`;

exports[`Invalid Answering setAny undefined answer 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": "This field is required.",
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": "Please select an option.",
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": "This field is required.",
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": "Please select an option.",
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Invalid Answering setAny undefined answer 2`] = `
{
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Invalid Answering setAny undefined answer 3`] = `
{
  "group1Question3": [],
  "subGroup1Question3": [],
  "subGroup1Question4": [],
}
`;

exports[`Invalid Answering setAny undefined answer 4`] = `
{
  "group1Question3": [],
}
`;

exports[`Invalid Answering setChoice invalid choice 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": "This field is required.",
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": "Please select an option.",
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": "This field is required.",
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": "Please select an option.",
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Invalid Answering setChoice invalid choice 2`] = `
{
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Invalid Answering setChoice invalid choice 3`] = `
{
  "group1Question3": [],
  "subGroup1Question3": [],
  "subGroup1Question4": [],
}
`;

exports[`Invalid Answering setChoice invalid choice 4`] = `
{
  "group1Question3": [],
}
`;

exports[`Invalid Answering setChoice undefined answer 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": "This field is required.",
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": "Please select an option.",
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": "This field is required.",
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": "Please select an option.",
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Invalid Answering setChoice undefined answer 2`] = `
{
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Invalid Answering setChoice undefined answer 3`] = `
{
  "group1Question3": [],
  "subGroup1Question3": [],
  "subGroup1Question4": [],
}
`;

exports[`Invalid Answering setChoice undefined answer 4`] = `
{
  "group1Question3": [],
}
`;

exports[`Invalid Answering setChoices empty answer 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": "This field is required.",
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": "Please select an option.",
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": "This field is required.",
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": "Please select an option.",
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Invalid Answering setChoices empty answer 2`] = `
{
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Invalid Answering setChoices empty answer 3`] = `
{
  "group1Question3": [],
  "subGroup1Question3": [],
  "subGroup1Question4": [],
}
`;

exports[`Invalid Answering setChoices empty answer 4`] = `
{
  "group1Question3": [],
}
`;

exports[`Invalid Answering setChoices invalid choice 1`] = `
{
  "groups": [
    {
      "custom": undefined,
      "disabled": false,
      "groups": [
        {
          "custom": undefined,
          "disabled": false,
          "groups": [],
          "id": "subGroup1",
          "questions": [
            {
              "choices": [],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Questions",
              },
              "disabled": false,
              "error": "This field is required.",
              "id": "subGroup1Question1",
              "type": "any",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question2Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice1",
                  "value": "subGroup1Question2Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice2",
                  "value": "subGroup1Question2Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question2Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question2Choice3",
                  "value": "subGroup1Question2Choice3",
                },
              ],
              "currentAnswer": undefined,
              "custom": {
                "title": "subGroup1Question2",
              },
              "disabled": false,
              "error": "Please select an option.",
              "id": "subGroup1Question2",
              "type": "choice",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question3Choice1",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice1",
                  "value": "subGroup1Question3Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice2",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice2",
                  "value": "subGroup1Question3Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question3Choice3",
                  },
                  "disabled": true,
                  "id": "subGroup1Question3Choice3",
                  "value": "subGroup1Question3Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": true,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question3",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
            {
              "choices": [
                {
                  "custom": {
                    "title": "subGroup1Question4Choice1",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice1",
                  "value": "subGroup1Question4Choice1",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice2",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice2",
                  "value": "subGroup1Question4Choice2",
                },
                {
                  "custom": {
                    "title": "subGroup1Question4Choice3",
                  },
                  "disabled": false,
                  "id": "subGroup1Question4Choice3",
                  "value": "subGroup1Question4Choice3",
                },
              ],
              "currentAnswer": [],
              "custom": {
                "title": "subGroup1Question3",
              },
              "disabled": false,
              "error": "Please select at least 1 option.",
              "id": "subGroup1Question4",
              "type": "choices",
              "validatedAnswer": undefined,
              "validating": false,
            },
          ],
          "validating": false,
        },
      ],
      "id": "group1",
      "questions": [
        {
          "choices": [],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Questions",
          },
          "disabled": false,
          "error": "This field is required.",
          "id": "group1Question1",
          "type": "any",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question2Choice1",
              },
              "disabled": false,
              "id": "group1Question2Choice1",
              "value": "group1Question2Choice1",
            },
            {
              "custom": {
                "title": "group1Question2Choice2",
              },
              "disabled": false,
              "id": "group1Question2Choice2",
              "value": "group1Question2Choice2",
            },
            {
              "custom": {
                "title": "group1Question2Choice3",
              },
              "disabled": false,
              "id": "group1Question2Choice3",
              "value": "group1Question2Choice3",
            },
          ],
          "currentAnswer": undefined,
          "custom": {
            "title": "group1Question2",
          },
          "disabled": false,
          "error": "Please select an option.",
          "id": "group1Question2",
          "type": "choice",
          "validatedAnswer": undefined,
          "validating": false,
        },
        {
          "choices": [
            {
              "custom": {
                "title": "group1Question3Choice1",
              },
              "disabled": false,
              "id": "group1Question3Choice1",
              "value": "group1Question3Choice1",
            },
            {
              "custom": {
                "title": "group1Question3Choice2",
              },
              "disabled": false,
              "id": "group1Question3Choice2",
              "value": "group1Question3Choice2",
            },
            {
              "custom": {
                "title": "group1Question3Choice3",
              },
              "disabled": false,
              "id": "group1Question3Choice3",
              "value": "group1Question3Choice3",
            },
          ],
          "currentAnswer": [],
          "custom": {
            "title": "group1Question3",
          },
          "disabled": false,
          "error": undefined,
          "id": "group1Question3",
          "type": "choices",
          "validatedAnswer": [],
          "validating": false,
        },
      ],
      "validating": false,
    },
  ],
  "questions": [],
  "validating": false,
}
`;

exports[`Invalid Answering setChoices invalid choice 2`] = `
{
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Invalid Answering setChoices invalid choice 3`] = `
{
  "group1Question3": [],
  "subGroup1Question3": [],
  "subGroup1Question4": [],
}
`;

exports[`Invalid Answering setChoices invalid choice 4`] = `
{
  "group1Question3": [],
}
`;
